[package]
name = "shaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
byteorder = "1.5.0"
bytes = "1.5.0"
ctr = "0.9.2"
ethereum-types = "0.14.1"
hex = "0.4.3"
hmac = "0.12.1"
rlp = "0.5.2"
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "1.0.50"
tracing = "0.1.40"

[dependencies.clap]
version = "4.4.8"
features = ["derive"]

[dependencies.secp256k1]
version = "0.28.0"
features = ["rand-std", "global-context", "recovery"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter", "std"]

[dependencies.tokio]
version = "1.34.0"
features = ["time", "net", "rt", "macros", "rt-multi-thread", "io-util"]
